<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@mipmap/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_systemC"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_select"
        android:title="Chose Ice"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_ore"
        android:title="Go to ore"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_gas"
        android:title="Go to gas"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_mineral"
        android:icon="@mipmap/ic_settings"
        android:title="Go to minerals"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_moon"
        android:icon="@mipmap/ic_settings"
        android:title="Go to moon ores"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="never"
        />
</menu>